# pyramid-kafka

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.cursor/rules/: python-conventions.mdc
.cursor/skills/create-dev-workflow/: .managed-skill.md  SKILL.md
.cursor/skills/create-dev-workflow/templates/: github-workflow.md  linear-workflow.md
.cursor/skills/lint-format/: SKILL.md
.cursor/skills/run-tests/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: index.html
configuration/: index.html
docs/: api.md  configuration.md  index.md
knowledge/: architecture.md  decisions.md
search/: search_index.json
src/pyramid_kafka/: __init__.py  consumer.py  core.py  producer.py  transaction.py
tests/: conftest.py  test_consumer.py  test_consumer_transaction.py  test_core.py  test_core_transaction.py  test_includeme.py  test_producer.py  test_pyramid_kafka.py  test_transaction.py  test_transaction_integration.py
