[project]
name = "pyramid-kafka"
dynamic = ["version"]
description = "A Pyramid plugin for Apache Kafka integration (producer/consumer support)"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "pyramid",
    "confluent-kafka",
    "click",
]

[project.optional-dependencies]
transaction = ["transaction"]

[project.scripts]
kafka-consumer = "pyramid_kafka.consumer:run"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyramid_kafka"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["ruff", "black", "pytest", "mkdocs-material", "transaction"]
